--- a/pages/index/flightList/flightList.wxml
+++ b/pages/index/flightList/flightList.wxml
@@ -3,31 +3,34 @@
         <cxmodal id='cxmodal' bind:refreshFlight="_refreshFlight" flightNo='{{currentFlight.flight_no}}' flight_date='{{currentFlight.startDate}}'>
         </cxmodal>
   <loading hidden="{{hiddenLoading}}">正在查询</loading>
-  <view class="weui-cells weui-cells_after-title"  wx:for="{{flightList}}">
-    <view open-type="switchTab"  class="weui-cell weui-cell_access" hover-class="weui-cell_active">
-      <view class="weui-cell__hd">
-        <view class="date">{{item.startDate}}</view>
-        <view class="time">{{item.startTime}}</view>
-        <view class="date">{{item.startCity}}</view>
-      </view>
-      <view class="weui-cell__bd " bindtap="goDetail" data-detail = "{{item}}">
-        <view style="width: 5rem;">
-          <view class="date flight">{{item.flight_no}}</view>
-          <view class="time">
-            <image src="../../../images/cxarrow.png" class="arrow"></image>
+  <view wx:if="{{flightList.length == 0}}" style="text-align: center;">无航班信息</view>
+  <view wx:if="{{flightList.length > 0}}">
+    <view class="weui-cells weui-cells_after-title"  wx:for="{{flightList}}">
+      <view open-type="switchTab"  class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        <view class="weui-cell__hd">
+          <view class="date">{{item.startDate}}</view>
+          <view class="time">{{item.startTime}}</view>
+          <view class="date">{{item.startCity}}</view>
+        </view>
+        <view class="weui-cell__bd " bindtap="goDetail" data-detail = "{{item}}">
+          <view style="width: 5rem;">
+            <view class="date flight">{{item.flight_no}}</view>
+            <view class="time">
+              <image src="../../../images/cxarrow.png" class="arrow"></image>
+            </view>
+            <view class="date plan">{{item.as_name}}</view>
           </view>
-          <view class="date plan">{{item.as_name}}</view>
+          <view style="display: flex;flex-direction: column;justify-content:space-between;">
+            <view class="date" style="text-align: right;width: 4.3rem">{{item.endDate}}</view>
+            <view class="time" style="text-align: right;width: 4.3rem">{{item.reachTime}}</view>
+            <view class="date" style="text-align: right;width: 4.3rem">{{item.endCity}}</view>
+          </view>
         </view>
-        <view style="display: flex;flex-direction: column;justify-content:space-between;">
-          <view class="date" style="text-align: right;width: 4.3rem">{{item.endDate}}</view>
-          <view class="time" style="text-align: right;width: 4.3rem">{{item.reachTime}}</view>
-          <view class="date" style="text-align: right;width: 4.3rem">{{item.endCity}}</view>
+        <view >
+          <view class="inner remindme" bindtap="showCxmodal" data-detail = "{{item}}" wx:if="{{item.remind_stats == '2'}}">提醒我</view>
+          <view class="inner reminding"  wx:if="{{item.remind_stats == '0'}}">提醒中</view>
+          <view class="inner reminded"  wx:if="{{item.remind_stats == '1'}}">已提醒</view>
         </view>
-      </view>
-      <view >
-        <view class="inner remindme" bindtap="showCxmodal" data-detail = "{{item}}" wx:if="{{item.remind_stats == '2'}}">提醒我</view>
-         <view class="inner reminding"  wx:if="{{item.remind_stats == '0'}}">提醒中</view>
-        <view class="inner reminded"  wx:if="{{item.remind_stats == '1'}}">已提醒</view>
       </view>
     </view>
   </view>
