--- a/pages/index/flightList/flightList.wxml
+++ b/pages/index/flightList/flightList.wxml
@@ -2,7 +2,8 @@
 <view class="container">
         <cxmodal id='cxmodal' bind:refreshFlight="_refreshFlight" flightNo='{{currentFlight.flight_no}}' flight_date='{{currentFlight.startDate}}'>
         </cxmodal>
-  <loading hidden="{{hiddenLoading}}">正在查询</loading>
+        <cxLoading  hiddenLoading="{{hiddenLoading}}" id='cxLoading'></cxLoading>
+  <!-- <loading hidden="{{hiddenLoading}}">正在查询</loading> -->
   <view wx:if="{{flightList.length == 0}}" style="text-align: center;">无航班信息</view>
   <view wx:if="{{flightList.length > 0}}">
     <view class="weui-cells weui-cells_after-title"  wx:for="{{flightList}}">
@@ -27,7 +28,7 @@
           </view>
         </view>
         <view >
-          <view class="inner remindme" bindtap="showCxmodal" data-detail = "{{item}}" wx:if="{{item.remind_stats == '2'}}">提醒我</view>
+          <view class="inner remindme" bindtap="showCxmodal" data-detail = "{{item}}" wx:if="{{item.remind_stats == '2' || !item.remind_stats}}">提醒我</view>
           <view class="inner reminding"  wx:if="{{item.remind_stats == '0'}}">提醒中</view>
           <view class="inner reminded"  wx:if="{{item.remind_stats == '1'}}">已提醒</view>
         </view>
