--- a/pages/index/flightDetail/flightDetail.wxml
+++ b/pages/index/flightDetail/flightDetail.wxml
@@ -1,9 +1,9 @@
 <!--flightDetail.wxml-->
 <view class="container">
-	<cxmodal id='cxmodal' bind:refreshFlight="_refreshFlight" flightNo='{{flightInfo.flight_no}}' flight_date='{{startDate}}'>
+	<cxmodal id='cxmodal' bind:refreshFlight="_refreshFlight" flightNo='{{flightInfo.flight_no}}' flight_date='{{flightInfo.startDate}}'>
 	</cxmodal>
 	<view class="mainTitle">
-		<view>飞机{{status}}起飞时间{{flightInfo.startTime}}</view>
+		<view>飞机{{flightInfo.status}}起飞时间{{flightInfo.startTime}}</view>
 		<view style="font-size:35rpx">{{flightInfo.as_name}}</view>
 	</view>
 	<view class="chooseCity pd-70">
