--- a/pages/index/index.wxml
+++ b/pages/index/index.wxml
@@ -50,7 +50,7 @@
           <view class="date">{{item.startCity}}</view>
         </view>
         <view class="weui-cell__bd " bindtap="goDetail" data-detail = "{{item}}">
-          <view style="width: 5rem;">
+          <view >
             <view class="date flight">{{item.flight_no}}</view>
             <view class="time">
               <image src="../../images/cxarrow.png" class="arrow"></image>
