--- a/pages/main/main.wxml
+++ b/pages/main/main.wxml
@@ -3,20 +3,10 @@
 <swiper class="swiper" indicator-dots="true" autoplay="true" interval="5000" duration="1000">    
 	<block wx:for="{{movies}}" wx:for-index="index">    
 		<swiper-item>    
-			<image src="{{item.url}}" class="slide-image" mode="aspectFill"/>    
+			<image src="{{item.carousel_path}}" class="slide-image" mode="aspectFill"/>    
 		</swiper-item>    
 	</block>    
 </swiper> 
-<!-- <view class="container">
-
-	<view  bindtap="onButtonTap" class="userinfo">
-		<image class="userinfo-avatar" src="{{userInfo.avatarUrl}}" background-size="cover"></image>
-		<text class="userinfo-nickname">{{userInfo.nickName}}</text>
-	</view>
-	<view>
-		<text class="user-motto">{{motto}}</text>
-	</view>
-</view> -->
 	<view class="mainTitle">西安机场欢迎您</view>
 <view class="page__bd">
 	<view class="weui-flex">
