--- a/pages/myCenter/complain/complain.wxml
+++ b/pages/myCenter/complain/complain.wxml
@@ -3,7 +3,7 @@
 	<view class="page__bd">
 		<view class="weui-cells__title"></view>
 		<view class="weui-cells weui-cells_after-title">
-			<navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+			<navigator url="./myComplain/myComplain" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
 				<view class="weui-cell__bd">我的投诉建议</view>
 				<view class="weui-cell__ft weui-cell__ft_in-access"></view>
 			</navigator>
