--- a/pages/switchcity/switchcity.wxml
+++ b/pages/switchcity/switchcity.wxml
@@ -4,13 +4,13 @@
     </view>
     <loading hidden="{{hiddenLoading}}">加载中</loading>
 
-    <view class="searchLetter touchClass">
+<!--     <view class="searchLetter touchClass">
       <view class="thishotText" bindtap="hotCity">
         <view style="margin-top:0;">当前</view>
         <view style="margin-top:0;">热门</view>
       </view>
       <view wx:for="{{searchLetter}}" style="color:#015f89;font-size:20rpx;" wx:key="index" data-letter="{{item.name}}" catchtouchend="clickLetter" >{{item.name}}</view>
-    </view>
+    </view> -->
     <block wx:if="{{isShowLetter}}">
       <view class="showSlectedLetter">
         {{showLetter}}
@@ -30,7 +30,7 @@
         </view>
       </view>
       <view class="selection" wx:for="{{cityList}}" wx:key="{{item.initial}}">
-        <view class="item_letter"  id="{{item.initial}}">{{item.initial}}</view>
+        <view class="item_letter" wx:if="{{item.cityInfo.length > 0}}"  id="{{item.initial}}">{{item.initial}}</view>
 <!--         <view class="item_city"  wx:for="{{item.cityInfo}}" wx:for-item="ct" wx:key="{{ct.dest}}" data-cityCode="{{ct.dest}}" data-city="{{ct.arpt_brief_c}}" bindtap="bindCity">
           {{ct.arpt_brief_c}}
         </view> -->
@@ -43,7 +43,7 @@
         </view>
       </view>
     </view>
-    <view wx:if="{{hotcityList.length == 0 && cityList.length == 0}}" style="text-align: center;">
+<!--     <view wx:if="{{hotcityList.length == 0 && cityList.length == 0}}" style="text-align: center;">
       无城市信息
-    </view>
+    </view> -->
   </scroll-view>
