--- a/pages/myCenter/complain/complain.wxml
+++ b/pages/myCenter/complain/complain.wxml
@@ -35,7 +35,7 @@
             </view>
         </view>
         <view class="weui-cells weui-cells_after-title">
-        	<navigator url="" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
+        	<navigator url="./complainType/complainType" class="weui-cell weui-cell_access" hover-class="weui-cell_active">
         		<view class="weui-cell__bd">选择问题分类</view>
         		<view class="weui-cell__ft weui-cell__ft_in-access"></view>
         	</navigator>
