--- a/pages/myCenter/complain/complainType/complainType.wxml
+++ b/pages/myCenter/complain/complainType/complainType.wxml
@@ -2,7 +2,7 @@
 <view class="page__bd">
 	<view class="container">
 		<view class="weui-cells__title"></view>
-		<cxFolder id='cxFolder' bind:refreshFlight="_refreshFlight" flightNo='{{currentFlight.flight_no}}' flight_date='{{currentFlight.startDate}}'>
+		<cxFolder id='cxFolder' bind:refreshFlight="_refreshFlight" folderTitle='出行相关' folderKey='transport' flight_date='{{currentFlight.startDate}}'>
 		</cxFolder>
 	</view>
 </view>
