--- a/pages/myCenter/complain/complainType/complainType.wxml
+++ b/pages/myCenter/complain/complainType/complainType.wxml
@@ -5,4 +5,9 @@
 		<cxFolder id='cxFolder' bind:refreshFlight="_refreshFlight" folderTitle='出行相关' folderKey='transport' flight_date='{{currentFlight.startDate}}'>
 		</cxFolder>
 	</view>
+	<view class="container">
+		<view class="weui-cells__title"></view>
+		<cxFolder id='cxFolder' bind:refreshFlight="_refreshFlight" folderTitle='航站楼设施' folderKey='building' flight_date='{{currentFlight.startDate}}'>
+		</cxFolder>
+	</view>
 </view>
