--- a/pages/index/flightList/flightList.wxml
+++ b/pages/index/flightList/flightList.wxml
@@ -4,7 +4,7 @@
         </cxmodal>
         <cxLoading  hiddenLoading="{{hiddenLoading}}" id='cxLoading'></cxLoading>
   <!-- <loading hidden="{{hiddenLoading}}">正在查询</loading> -->
-  <view wx:if="{{flightList.length == 0}}" style="text-align: center;">无航班信息</view>
+  <!-- <view wx:if="{{flightList.length == 0}}" style="text-align: center;">无航班信息</view> -->
   <view class="listContainer" wx:if="{{flightList.length > 0}}">
     <view class="weui-cells weui-cells_after-title"  wx:for="{{flightList}}">
       <view open-type="switchTab"  class="weui-cell weui-cell_access" hover-class="weui-cell_active">
