--- a/components/cxFolder/cxFolder.wxml
+++ b/components/cxFolder/cxFolder.wxml
@@ -3,7 +3,7 @@
 <view class="weui-cells weui-cells_after-title">
   <view url="" class="weui-cell weui-cell_access no_handle" hover-class="weui-cell_active">
     <view class="weui-cell__bd">{{folderTitle}}</view>
-    <view style="top:0" bindtap="showFrom" data-param="{{folderKey}}" class="{{arrowClass}}"><image   src="../../images/cxdown.png" class=" down "></image></view>
+    <view style="top:0" bindtap="showFrom" data-param="{{folderKey}}" class="down {{arrowClass}}"><image   src="../../images/cxdown.png" class="down"></image></view>
   </view>
   <view style="background: #f8f8f8;" class="{{panelClass}}">
     <view class="weui-grids">
