--- a/pages/index/flightDetail/flightDetail.wxml
+++ b/pages/index/flightDetail/flightDetail.wxml
@@ -3,8 +3,8 @@
 	<cxmodal id='cxmodal' bind:refreshFlight="_refreshFlight" flightNo='{{flightInfo.flight_no}}' flight_date='{{flightInfo.startDate}}'>
 	</cxmodal>
 	<view class="mainTitle">
-		<view>飞机{{flightInfo.status}}起飞时间{{flightInfo.startTime}}</view>
-		<view style="font-size:35rpx">{{flightInfo.as_name}}</view>
+		<view>飞机{{flightInfo.status}}起飞时间<text style="margin: 0 10px">{{flightInfo.startTime}}</text></view>
+		<view style="font-size:35rpx">[{{flightInfo.as_name}}]</view>
 	</view>
 	<view class="chooseCity pd-70">
 		<view class="date flight"><image class="flighticon" src="../../../images/cxflight.png"></image>{{flightInfo.flight_no}}</view>
@@ -37,6 +37,6 @@
 		</view>
 	</view>
 	<button class="sureBtn" bindtap="showCxmodal" wx:if="{{flightInfo.remind_stats == '2'}}">添加航班提醒</button>
-	<button class="disableBtn" bindtap="deleteFlightRemind" wx:if="{{flightInfo.remind_stats == '0' ||flightInfo.remind_stats == '1'}}">取消航班提醒</button>
+	<button class="sureBtn" bindtap="deleteFlightRemind" wx:if="{{flightInfo.remind_stats == '0' ||flightInfo.remind_stats == '1'}}">取消航班提醒</button>
 	<button class="redbtn"  open-type="share">分享我的行程</button>
 </view>
