--- a/pages/myCenter/complain/complainDetail/complainDetail.wxml
+++ b/pages/myCenter/complain/complainDetail/complainDetail.wxml
@@ -38,8 +38,8 @@
 	</view>
 	<view class="rate">
 		<view style="text-align: center;" ><text>请为本次服务进行打分</text></view>
-		<cxRate id='cxRate' bind:refreshFlight="_refreshFlight" flightNo='{{currentFlight.flight_no}}' flight_date='{{currentFlight.startDate}}'>
+		<cxRate id='cxRate' star='{{star}}' bindchange='handleChange'>
 		</cxRate>
 	</view>
-	<button class="sureBtn" bindtap="seatchFlight">提交评价</button>
+	<button class="sureBtn" bindtap="sendStar">提交评价</button>
 </view>
