--- a/pages/myCenter/complain/complainDetail/complainDetail.wxml
+++ b/pages/myCenter/complain/complainDetail/complainDetail.wxml
@@ -3,38 +3,41 @@
 	<view class="page__bd">
 		<view class="weui-cells__title">
 			<text>原文</text>
-			<text >编号：12345</text>
+			<text >编号：{{complaintDetail.complaint_code}}</text>
 		</view>
 		<view class="weui-cells weui-cells_after-title">
-            <view class="complain_main">机场大巴周围很多黑车，每次都很受困扰，希望可以改善改善改善改善改善改善改善改善</view>
+            <view class="complain_main">{{complaintDetail.complaint_content}}</view>
             <view class="weui-uploader__bd" style="padding: 25rpx">
             	<view class="weui-uploader__files" id="uploaderFiles">
-            		<block wx:for="{{files}}" wx:key="*this">
+<!--             		<block wx:for="{{files}}" wx:key="*this">
             			<view class="weui-uploader__file" bindtap="previewImage" id="{{item}}">
             				<image class="weui-uploader__img" src="{{item}}" mode="aspectFill" />
             			</view>
-            		</block>
+            		</block> -->
             		<view class="weui-uploader__file">
-            			<image class="weui-uploader__img" src="../../../../images/swiper.png" mode="aspectFill" />
+            			<image class="weui-uploader__img" src="{{complaintDetail.complaint_content.picture_url1}}" mode="aspectFill" />
             		</view>
             		<view class="weui-uploader__file">
-            			<image class="weui-uploader__img" src="../../../../images/swiper.png" mode="aspectFill" />
+            			<image class="weui-uploader__img" src="{{complaintDetail.complaint_content.picture_url2}}" mode="aspectFill" />
             		</view>
             		<view class="weui-uploader__file">
-            			<image class="weui-uploader__img" src="../../../../images/swiper.png" mode="aspectFill" />
+            			<image class="weui-uploader__img" src="{{complaintDetail.complaint_content.picture_url3}}" mode="aspectFill" />
             		</view>
             		<view class="weui-uploader__file">
-            			<image class="weui-uploader__img" src="../../../../images/swiper.png" mode="aspectFill" />
+            			<image class="weui-uploader__img" src="{{complaintDetail.complaint_content.picture_url4}}" mode="aspectFill" />
             		</view>
             	</view>
             </view>
-            <view class="complain_no"><text>2018年3月4日</text></view>
-		</view>
+            <view class="complain_no"><text>{{complaintDetail.commit_time}}</text></view>
+            </view>
+            <block wx:if="{{complaintDetail.complaint_status == '2'}}">
+            
 		<view class="weui-cells__title">客户回复</view>
 		<view class="weui-cells weui-cells_after-title">
-			<view class="complain_main">尊敬的客户您好，关于您提出的问题，我们已经加强了管理，并进行了解决，感谢您的建议，祝您旅途愉快</view>
-			<view class="complain_no"><text>2018年3月4日</text></view>
+			<view class="complain_main">{{complaintDetail.back_content}}</view>
+			<view class="complain_no"><text>{{complaintDetail.back_time}}</text></view>
 		</view>
+            </block>
 	</view>
 	<view class="rate">
 		<view style="text-align: center;" ><text>请为本次服务进行打分</text></view>
