--- a/pages/myCenter/complain/complainDetail/complainDetail.wxml
+++ b/pages/myCenter/complain/complainDetail/complainDetail.wxml
@@ -30,7 +30,7 @@
             </view>
             <view class="complain_no"><text>{{complaintDetail.commit_time}}</text></view>
             </view>
-            <block wx:if="{{complaintDetail.complaint_status == '2'}}">
+            <block wx:if="{{complaintDetail.back_content}}">
             
 		<view class="weui-cells__title">客服回复</view>
 		<view class="weui-cells weui-cells_after-title">
@@ -39,10 +39,17 @@
 		</view>
             </block>
 	</view>
-	<view class="rate">
-		<view style="text-align: center;" ><text>请为本次服务进行打分</text></view>
-		<cxRate id='cxRate' star='{{star}}' bindchange='handleChange'>
-		</cxRate>
-	</view>
-	<button class="sureBtn" bindtap="saveComplaintEvaluate">提交评价</button>
+      <block wx:if="{{complaintDetail.complaint_status == '3'}}">
+           <view class="rate">
+                <view style="text-align: center;" ><text>请为本次服务进行打分</text></view>
+                <cxRate id='cxRate' score='{{star}}' bindchange='handleChange'>
+                </cxRate>
+          </view>
+          <button class="sureBtn" bindtap="saveComplaintEvaluate">提交评价</button>
+    </block>
+    <block wx:if="{{complaintDetail.complaint_status == '4'}}">
+      <view style="text-align: center;" ><text>您的评价</text></view>
+          <cxRate id='cxRate' score='{{complaintDetail.score}}' bindchange='handleChange'>
+                </cxRate>
+    </block>
 </view>
