--- a/pages/myCenter/complain/myComplain/myComplain.wxml
+++ b/pages/myCenter/complain/myComplain/myComplain.wxml
@@ -4,19 +4,19 @@
         <block wx:for="{{complaintList}}">
           <view class="weui-cells__title"></view>
           <view class="weui-cells weui-cells_after-title">
-            <block wx:if="{{item.complaint_status == '1'}}">
+            <block wx:if="{{item.complaint_status == '1' ||item.complaint_status == '2'}}">
                 <view  class="weui-cell weui-cell_access no_handle" hover-class="weui-cell_active" bindtap="goDetail" data-detail = "{{item}}">
                     <view class="weui-cell__bd">{{item.commit_time}}</view>
                     <view class="weui-cell__ft weui-cell__ft_in-access">待处理</view>
                 </view>
             </block>
-            <block wx:if="{{item.complaint_status == '2'}}">
+            <block wx:if="{{item.complaint_status == '3'}}">
                 <view  class="weui-cell weui-cell_access wait_for" hover-class="weui-cell_active" bindtap="goDetail" data-detail = "{{item}}">
                     <view class="weui-cell__bd">{{item.commit_time}}</view>
                     <view class="weui-cell__ft weui-cell__ft_in-access">待评价</view>
                 </view>
             </block>
-            <block wx:if="{{item.complaint_status == '3'}}">
+            <block wx:if="{{item.complaint_status == '4'}}">
                 <view  class="weui-cell weui-cell_access evaluated" hover-class="weui-cell_active" bindtap="goDetail" data-detail = "{{item}}">
                     <view class="weui-cell__bd">{{item.commit_time}}</view>
                     <view class="weui-cell__ft weui-cell__ft_in-access">已评价</view>
